@@ -18,6 +18,8 @@ class HaNonNonNon:
     def __init__(self):
         pass
 
+import logilab.common.decorators
+
 class SomeClass(object):
     """another docstring"""
 
@@ -38,3 +40,9 @@ class SomeClass(object):
     def prop(self):
         """I'm the 'prop' property."""
         del self._prop
+
+    # test regression
+    @logilab.common.decorators.cached
+    def noregr(self):
+        """used to crash in redefined_by_decorator"""
+        return self.prop
